@@ -2,21 +2,15 @@ package com.safetynet.safetynetalertsapi.repositories;
 
 import com.safetynet.safetynetalertsapi.exceptions.ResourceAlreadyExistsException;
 import com.safetynet.safetynetalertsapi.exceptions.ResourceNotFoundException;
-import com.safetynet.safetynetalertsapi.model.DataSet;
 import com.safetynet.safetynetalertsapi.model.Person;
 import com.safetynet.safetynetalertsapi.utils.StringFormatter;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class PersonRepository implements BaseRepository<Person> {
-
-    private final Logger logger = LogManager.getLogger();
 
     @Autowired
     JsonDataHandler dataHandler;
@@ -24,23 +18,18 @@ public class PersonRepository implements BaseRepository<Person> {
     @Autowired
     StringFormatter formatter;
 
+    /**
+     * Retrieves all persons in the data source file.
+     *
+     * @return a list of all {@link Person} instances
+     */
     @Override
     public List<Person> findAll() {
         return dataHandler.getAllData().getPersons();
     }
 
     public List<Person> findByLastName(String lastName) {
-        List<Person> persons = findAll().stream().filter(p -> p.getIdentity().getLastName().equalsIgnoreCase(lastName)).collect(Collectors.toList());
-
-        return persons;
-    }
-
-    public List<Person> findAllPersonsByAddress(String address) {
-
-        return findAll()
-                .stream()
-                .filter(person -> person.getAddress().getAddress().replace(" ", "").equalsIgnoreCase(address))
-                .collect(Collectors.toList());
+        return findAll().stream().filter(p -> p.getIdentity().getLastName().equalsIgnoreCase(lastName)).toList();
     }
 
     public Person save(Person person) throws ResourceAlreadyExistsException {
